@@ -1157,7 +1157,7 @@ be_visitor_connect_block::visit_uses (be_uses *node)
 
   if (! is_multiple)
     {
-      os_ << be_nl << be_nl
+      os_ << be_nl
           << "return 0;";
     }
 
@@ -1305,15 +1305,8 @@ be_visitor_subscribe_block::visit_publishes (
       << "::" << obj_name << "Consumer_var sub =" << be_idt_nl
       << "::" << obj_name << "Consumer::_narrow (subscribe);"
       << be_uidt_nl << be_nl
-      << "if ( ::CORBA::is_nil (sub.in ()))" << be_idt_nl
-      << "{" << be_idt_nl
-      << "throw ::Components::InvalidConnection ();" << be_uidt_nl
-      << "}" << be_uidt_nl
-      << "else" << be_idt_nl
-      << "{" << be_idt_nl
       << "return this->subscribe_" << port_name
       << " (sub.in ());" << be_uidt_nl
-      << "}" << be_uidt << be_uidt_nl
       << "}" << be_uidt;
 
   return 0;
